--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,11 +3,11 @@
     package="com.example.scheme"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-
+	 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
