--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,11 +37,10 @@
         </activity>
         <activity
             android:name="com.example.scheme.ColorPickerActivity"
-            android:label="@string/title_activity_color_picker" >
-        </activity>
-        <activity
-            android:name="com.example.scheme.ColorPickerActivity2"
             android:label="@string/title_activity_color_picker_activity2" >
+            <meta-data
+                android:name="android.support.UI_OPTIONS"
+                android:value="splitActionBarWhenNarrow" />
         </activity>
     </application>
 
