--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\AndroidSlidingUpPanel-master\\library
-android.library.reference.2=../appcompat_v7_3
+android.library.reference.1=..\\appcompat_v7_3
