--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,7 +16,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.scheme.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,14 +30,16 @@
         </activity>
         <activity
             android:name="com.example.scheme.PinpointActivity"
-            android:label="@string/title_activity_pinpoint" >
+            android:label="@string/title_activity_pinpoint"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.UI_OPTIONS"
                 android:value="splitActionBarWhenNarrow" />
         </activity>
         <activity
             android:name="com.example.scheme.ColorPickerActivity"
-            android:label="@string/title_activity_color_picker_activity2" >
+            android:label="@string/title_activity_color_picker_activity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.UI_OPTIONS"
                 android:value="splitActionBarWhenNarrow" />
