--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
-        android:name=".ObjectPreference"
+        android:name="com.example.scheme.ObjectPreference"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -44,6 +45,10 @@
             <meta-data
                 android:name="android.support.UI_OPTIONS"
                 android:value="splitActionBarWhenNarrow" />
+        </activity>
+        <activity
+            android:name="com.example.scheme.MyPalettesActivity"
+            android:label="@string/title_activity_my_palettes" >
         </activity>
     </application>
 
