--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name="com.example.scheme.ObjectPreference"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/schemelogo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
